# b.3-linbot

./: Cargo.toml
src/: action.rs  idea.rs  lib.rs  pattern.rs
src/spec/: lpath.rs  mod.rs
tests/: test1.rs
